--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>
+
+		<dependency>
+		<groupId>net.nurigo</groupId>
+		<artifactId>sdk</artifactId>
+		<version>4.2.3</version>
+	</dependency>
 	</dependencies>
     <build>
         <plugins>
@@ -216,8 +222,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>7</source>
+                    <target>7</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
