비밀번호 찾기(이메일 인증)

--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,31 @@
 		<groupId>net.nurigo</groupId>
 		<artifactId>sdk</artifactId>
 		<version>4.2.3</version>
-	</dependency>
+		</dependency>
+
+
+		<!-- mail library -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
+		<!-- mail 서포트 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
+
+
+
+
+
+
+
+
 	</dependencies>
     <build>
         <plugins>
