--- a/pom.xml
+++ b/pom.xml
@@ -202,19 +202,30 @@
 		</dependency>
 
 
-		<!-- mail library -->
+		<!-- mail library-->
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
 
-		<!-- mail 서포트 -->
+		<!--mail support-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+
+		<!--<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>3.1.2</version>
+		</dependency>-->
 
 
 
